@@ -1,5 +1,5 @@
 DIST ffmpeg-0.6.tar.bz2 3720372 RMD160 1ff6a8f419239a03d84f67cc954f60f73632432a SHA1 c130e3bc368251b9130ce6eafb44fe8c3993ff5c SHA256 6730baa6750f0cbffaf5f4c04f8ddcf1ebe6c651a6eeb12ae947a228de4c8120
 EBUILD ffmpeg-0.6.ebuild 8108 RMD160 543fd68fbd91491e3f79660fce1259c4e4fbd492 SHA1 eafc1b2e1e3922919ac3f786f208b03b19ab6c10 SHA256 3b25ceba994101f9ce8f7921d26bdd4149a72d309563b7feebef5e5329db3433
-EBUILD ffmpeg-9999-r1.ebuild 8062 RMD160 061061212418d0c08a91a57f058fa11fbef5ac14 SHA1 9a22cb5bb5cea065d84cb05f00419f6922760153 SHA256 4498f6777ca19dc6a7252fd4bf03a99de34013ea016fea844add2879bf2648ab
-MISC ChangeLog 521 RMD160 b7ec61557007d5fb8099c7350fed74ed6c5d57b3 SHA1 080ead2e1b49b8057f84425fe2dd1eb6530e921d SHA256 d0caca09cdfd68ac89cc5fd94adb1aeead961e91bbe1b32601f93223d06c5e4c
-MISC metadata.xml 2012 RMD160 3d25544e563b33eb0b13315b9d3d44c5630dd6d1 SHA1 bbc047b1e4d759c9d026d53ac8c5e52360bc2bf0 SHA256 3da74054275b6e6302f6b337d48679e59a9649f660bca9c1770ff602e225aab3
+EBUILD ffmpeg-9999-r1.ebuild 8726 RMD160 3cade37eb8040c37416ebb92d39aa9494f452c9e SHA1 b2f291c9f49811bcd5f197d4fd52e35e18932159 SHA256 ed9841c296b75a1106e47700322ac60c667b75a869be9c72215ca2d9a22dd99e
+MISC ChangeLog 659 RMD160 5f7270bfe9bf3629b7eefe6b14dc542f9293bcc0 SHA1 b8a75e55867d00959efc2f1c1d529cbffc943876 SHA256 b0a07b271a4ad2400ae4b6bdfbb56ca293f6ed7918cefeb91ef7eceec12e5844
+MISC metadata.xml 2114 RMD160 771bdcbeefe47f96a86022c590268791fbf35db4 SHA1 a1d4365de50ac20b6775f94e5b29ce2acabc31c1 SHA256 8e3c4ee0a34747dc0e5893c9749ab54fe989494e4fd28eff04e5015c961fc8ba
