@@ -15,11 +15,13 @@
 		<flag name="cpudetection">Enables runtime CPU detection (useful for bindist, compatibility on other CPUs)</flag>
 		<flag name="dirac">Enable Dirac video support (an advanced royalty-free video compression format) via the reference library: dirac.</flag>
 		<flag name="faac">Use external faac library for AAC encoding</flag>
-		<flag name="faad">Use external faad library for AAC decoding (instead of internal libavcodec support)</flag>
+		<flag name="ffmpeg-mt">Experimental multithreaded decoding</flag>
+		<flag name="frei0r">Enable frei0r wrapping in libavfilter</flag>
 		<flag name="hardcoded-tables">Use pre-calculated tables rather than calculating them on the fly.</flag>
 		<flag name="mmxext">Enables mmx2 support</flag>
 		<flag name="network">Enables network streaming support</flag>
 		<flag name="pic">Force shared libraries to be built as PIC (this is slower)</flag>
+		<flag name="qt-faststart">Build and install qt-faststart application</flag>
 		<flag name="rtmp">Enable Real Time Messaging Protocol using librtmp</flag>
 		<flag name="schroedinger">Enable Dirac video support (an advanced royalty-free video compression format) via libschroedinger (high-speed implementation in C of the Dirac codec).</flag>
 		<flag name="ssse3">faster floating point optimization for SSSE3 capable chips (Intel Core 2 and later chips)</flag>
